# task_f

./: .gitignore  CLAUDE.md  README.md  TAMPER_DETECTION_REPORT.md  pyproject.toml
audit_log/: exceptions.py  log.py  merkle.py  models.py  records.py  utils.py
config/: event_types.json
tests/: test_anchor.py  test_lineage.py  test_merkle.py  test_tamper_detection.py  test_verify.py
